manifests/app.service.yml
apiVersion: v1
kind: Service
metadata:
  name: apogee-app-external
spec:
  type: NodePort
  selector:
    app: apogee-app
  ports:
  - name: apogeeapp
    port: 80
    targetPort: 3000
