manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apogee-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
        - path: "/inference/*"
          backend:
            serviceName: model-server-external
            servicePort: modelserver
